RESOLVE-ONLY repo gen strategy fixes: * make sure versions aren't missing when resolving dependencies of non-managed artifacts * allow file-based URLs for extensionsListUrl * add missing JAR artifacts for POM artifacts with jar packaging * support for transitive dependency exclusions when performing Maven   dependency resolution requests